Add Render deployment configuration
 Features:
- render.yaml for Render deployment
- Production build scripts and configuration
- Updated server to serve React build in production
- Dynamic CORS configuration for production/development
- Comprehensive deployment documentation
- Environment variable configuration for hosting

 Deployment:
- Render-ready with automatic build process
- Health check endpoint for monitoring
- Static file serving for React production build
- Support for environment-based configuration

 Documentation:
- DEPLOYMENT.md with complete setup guide
- RENDER.md with Render-specific instructions
- Updated README.md with quick start options

The platform now supports:
- Online hosting via Render (Internet mode only)
- Local setup for full LAN and FTP functionality

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@ PORT=3001
 NODE_ENV=development
 SECRET_KEY=your-secret-key-change-in-production
 
+# Production Environment Variables (for Render deployment)
+# NODE_ENV=production
+# PORT=10000
+# CORS_ORIGIN=https://your-render-app.onrender.com
+# RENDER_EXTERNAL_URL=https://your-render-app.onrender.com
+
 # Domain Configuration (for HTTPS in production)
 DOMAIN=localhost
 EMAIL=admin@localhost
