--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server:dev": "cd server && npm run dev",
     "client:dev": "cd client && npm start",
     "build": "cd client && npm run build",
+    "build:prod": "npm run install:all && npm run build",
     "start": "cd server && npm start",
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
     "docker:build": "docker-compose build",
@@ -24,6 +25,10 @@
   ],
   "author": "FileShare Team",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
